update docker deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>BloomScroll</title>
+    <meta content="BloomScroll: Social media reimagined for real connections, growth, and impact. Join the change." 
+    name="description"/>
+    <meta content="BloomScroll" property="og:title"/>
+    <meta content="BloomScroll: Social media reimagined for real connections, growth, and impact. Join the change." 
+    property="og:description"/>
+    <meta content="https://cdn.prod.website-files.com/675612277278edf4cf5c104a/675c6552f5ee53721b60a0a0_BloomScroll%20Where%20Authentic%20Connections%20Thrive.gif" 
+    property="og:image"/>
+    <meta content="BloomScroll" property="twitter:title"/>
+    <meta content="BloomScroll: Social media reimagined for real connections, growth, and impact. Join the change."
+    property="twitter:description"/>
+    <meta content="https://cdn.prod.website-files.com/675612277278edf4cf5c104a/675c6552f5ee53721b60a0a0_BloomScroll%20Where%20Authentic%20Connections%20Thrive.gif" 
+    property="twitter:image"/>
+    <meta property="og:type" content="website"/>
+    <meta content="summary_large_image" name="twitter:card"/>
+    <link href="https://cdn.prod.website-files.com/675612277278edf4cf5c104a/675fdc1e19afb5fb83ffdcc7_BloomSroll(32x32).jpg" rel="shortcut icon" type="image/x-icon">
+    <link href="https://cdn.prod.website-files.com/675612277278edf4cf5c104a/675fdc3d840b0a424316425a_BloomSroll(256x256.jpg" rel="apple-touch-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
